--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -218,6 +218,7 @@ source "fs/ufs/Kconfig"
 source "fs/exofs/Kconfig"
 source "fs/f2fs/Kconfig"
 source "fs/efivarfs/Kconfig"
+source "fs/sdcardfs/Kconfig"
 
 endif # MISC_FILESYSTEMS
 
