--- a/arch/arm64/configs/null_ido_defconfig
+++ b/arch/arm64/configs/null_ido_defconfig
@@ -41,7 +41,7 @@ CONFIG_CROSS_COMPILE=""
 CONFIG_LOCALVERSION="-NULL-$(date +%Y%m%d)"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
-# CONFIG_SWAP is not set
+CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
 CONFIG_SYSVIPC_SYSCTL=y
 # CONFIG_POSIX_MQUEUE is not set
@@ -346,9 +346,11 @@ CONFIG_KSM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
 CONFIG_CROSS_MEMORY_ATTACH=y
-# CONFIG_CLEANCACHE is not set
+CONFIG_CLEANCACHE=y
+# CONFIG_FRONTSWAP is not set
 # CONFIG_USE_USER_ACCESSIBLE_TIMERS is not set
 # CONFIG_ZBUD is not set
+# CONFIG_BALANCE_ANON_FILE_RECLAIM is not set
 CONFIG_GENERIC_EARLY_IOREMAP=y
 CONFIG_PROCESS_RECLAIM=y
 # CONFIG_XEN is not set
@@ -384,6 +386,7 @@ CONFIG_SUSPEND=y
 CONFIG_SUSPEND_FREEZER=y
 CONFIG_HAS_WAKELOCK=y
 CONFIG_WAKELOCK=y
+CONFIG_POWERSUSPEND=y
 CONFIG_PM_SLEEP=y
 CONFIG_PM_SLEEP_SMP=y
 CONFIG_PM_AUTOSLEEP=y
@@ -397,7 +400,6 @@ CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
 CONFIG_CPU_PM=y
 CONFIG_SUSPEND_TIME=y
-CONFIG_POWERSUSPEND=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM64_CPU_SUSPEND=y
 
