Added intelli_plug v5.0

--- a/arch/arm64/configs/null_ido_defconfig
+++ b/arch/arm64/configs/null_ido_defconfig
@@ -3485,7 +3485,8 @@ CONFIG_MSM_CORE_CTL_HELPER=y
 # CONFIG_MSM_CORE_CTL is not set
 CONFIG_MSM_PERFORMANCE=y
 # CONFIG_MSM_PERFORMANCE_HOTPLUG_ON is not set
-CONFIG_MSM_HOTPLUG=y
+CONFIG_INTELLI_PLUG=y
+# CONFIG_MSM_HOTPLUG is not set
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 
 #
