Added thunderplug_control v5.0

--- a/arch/arm64/configs/null_ido_defconfig
+++ b/arch/arm64/configs/null_ido_defconfig
@@ -3540,8 +3540,9 @@ CONFIG_MSM_CORE_CTL_HELPER=y
 # CONFIG_MSM_CORE_CTL is not set
 CONFIG_MSM_PERFORMANCE=y
 # CONFIG_MSM_PERFORMANCE_HOTPLUG_ON is not set
-CONFIG_INTELLI_PLUG=y
+# CONFIG_INTELLI_PLUG is not set
 # CONFIG_MSM_HOTPLUG is not set
+# CONFIG_THUNDERPLUG_CONTROL=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 
 #
