--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -594,6 +594,15 @@ config MSM_HOTPLUG
 	  The MSM hotplug driver controls on-/offlining of additional cores based
 	  on current cpu load.
 
+config THUNDERPLUG_CONTROL
+	bool "Enable plugging down/up of cores using powersuspend"
+	depends on HOTPLUG_CPU
+	default n
+	help
+	 This driver uses powersuspend to take down the cpu cores
+	 on a octa core device.
+
+
 source "drivers/soc/qcom/memshare/Kconfig"
 
 endif # ARCH_MSM
