--- a/arch/arm64/configs/null_ido_defconfig
+++ b/arch/arm64/configs/null_ido_defconfig
@@ -92,12 +92,10 @@ CONFIG_RCU_FANOUT_LEAF=16
 # CONFIG_RCU_FANOUT_EXACT is not set
 CONFIG_RCU_FAST_NO_HZ=y
 # CONFIG_TREE_RCU_TRACE is not set
-CONFIG_RCU_BOOST=y
-CONFIG_RCU_BOOST_PRIO=1
-CONFIG_RCU_BOOST_DELAY=500
+# CONFIG_RCU_BOOST is not set
 # CONFIG_RCU_NOCB_CPU is not set
 CONFIG_IKCONFIG=y
-# CONFIG_IKCONFIG_PROC is not set
+CONFIG_IKCONFIG_PROC=y
 CONFIG_LOG_BUF_SHIFT=17
 CONFIG_GENERIC_SCHED_CLOCK=y
 CONFIG_CGROUPS=y
@@ -128,7 +126,7 @@ CONFIG_NAMESPACES=y
 CONFIG_NET_NS=y
 CONFIG_UIDGID_CONVERTED=y
 # CONFIG_UIDGID_STRICT_TYPE_CHECKS is not set
-# CONFIG_SCHED_AUTOGROUP is not set
+CONFIG_SCHED_AUTOGROUP=y
 CONFIG_MM_OWNER=y
 # CONFIG_SYSFS_DEPRECATED is not set
 CONFIG_RELAY=y
@@ -346,11 +344,11 @@ CONFIG_MIGRATION=y
 CONFIG_PHYS_ADDR_T_64BIT=y
 CONFIG_ZONE_DMA_FLAG=1
 CONFIG_BOUNCE=y
-# CONFIG_KSM is not set
+CONFIG_KSM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
 CONFIG_CROSS_MEMORY_ATTACH=y
-# CONFIG_CLEANCACHE is not set
+CONFIG_CLEANCACHE=y
 # CONFIG_FRONTSWAP is not set
 # CONFIG_USE_USER_ACCESSIBLE_TIMERS is not set
 # CONFIG_ZBUD is not set
@@ -402,7 +400,6 @@ CONFIG_PM=y
 # CONFIG_PM_DEBUG is not set
 CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
-CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_PM=y
 CONFIG_SUSPEND_TIME=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
@@ -3542,7 +3539,7 @@ CONFIG_MSM_PERFORMANCE=y
 # CONFIG_MSM_PERFORMANCE_HOTPLUG_ON is not set
 # CONFIG_INTELLI_PLUG is not set
 # CONFIG_MSM_HOTPLUG is not set
-# CONFIG_THUNDERPLUG_CONTROL=y
+CONFIG_THUNDERPLUG_CONTROL=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 
 #
@@ -3552,7 +3549,7 @@ CONFIG_MEM_SHARE_QMI_SERVICE=y
 CONFIG_MSM_TZ_LOG=y
 CONFIG_FINGERPRINT=y
 CONFIG_FINGERPRINT_FPC1020=y
-# CONFIG_FINGERPRINT_GOODIX_GF3208 is not set
+CONFIG_FINGERPRINT_GOODIX_GF3208=y
 
 #
 # Firmware Drivers
@@ -3600,8 +3597,11 @@ CONFIG_FUSE_FS=y
 #
 # CD-ROM/DVD Filesystems
 #
-# CONFIG_ISO9660_FS is not set
-# CONFIG_UDF_FS is not set
+CONFIG_ISO9660_FS=y
+CONFIG_JOLIET=y
+# CONFIG_ZISOFS is not set
+CONFIG_UDF_FS=y
+CONFIG_UDF_NLS=y
 
 #
 # DOS/FAT/NT Filesystems
@@ -3613,7 +3613,7 @@ CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
 CONFIG_NTFS_FS=y
 # CONFIG_NTFS_DEBUG is not set
-# CONFIG_NTFS_RW is not set
+CONFIG_NTFS_RW=y
 
 #
 # Pseudo filesystems
@@ -4019,7 +4019,7 @@ CONFIG_GENERIC_IO=y
 CONFIG_CRC_CCITT=y
 CONFIG_CRC16=y
 # CONFIG_CRC_T10DIF is not set
-# CONFIG_CRC_ITU_T is not set
+CONFIG_CRC_ITU_T=y
 CONFIG_CRC32=y
 # CONFIG_CRC32_SELFTEST is not set
 CONFIG_CRC32_SLICEBY8=y
