defconfig: Fixed derp

--- a/arch/arm64/configs/null_ido_defconfig
+++ b/arch/arm64/configs/null_ido_defconfig
@@ -3527,9 +3527,9 @@ CONFIG_MSM_CPU_PWR_CTL=y
 CONFIG_MSM_CORE_CTL_HELPER=y
 # CONFIG_MSM_CORE_CTL is not set
 CONFIG_MSM_PERFORMANCE=y
-CONFIG_MSM_PERFORMANCE_HOTPLUG_ON is not set
+CONFIG_MSM_PERFORMANCE_HOTPLUG_ON=y
 # CONFIG_INTELLI_PLUG is not set
-# CONFIG_MSM_HOTPLUG=y
+# CONFIG_MSM_HOTPLUG is not set
 CONFIG_THUNDERPLUG_CONTROL=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 
@@ -3726,7 +3726,7 @@ CONFIG_NLS_ISO8859_1=y
 # CONFIG_NLS_MAC_INUIT is not set
 # CONFIG_NLS_MAC_ROMANIAN is not set
 # CONFIG_NLS_MAC_TURKISH is not set
-# CONFIG_NLS_UTF8 is not set
+CONFIG_NLS_UTF8=y
 # CONFIG_DLM is not set
 # CONFIG_VIRTUALIZATION is not set
 
