--- a/arch/arm64/configs/null_ido_defconfig
+++ b/arch/arm64/configs/null_ido_defconfig
@@ -3540,7 +3540,7 @@ CONFIG_MEM_SHARE_QMI_SERVICE=y
 CONFIG_MSM_TZ_LOG=y
 CONFIG_FINGERPRINT=y
 CONFIG_FINGERPRINT_FPC1020=y
-# CONFIG_FINGERPRINT_GOODIX_GF3208 is not set
+CONFIG_FINGERPRINT_GOODIX_GF3208=y
 
 #
 # Firmware Drivers
