--- a/arch/arm64/configs/null_ido_defconfig
+++ b/arch/arm64/configs/null_ido_defconfig
@@ -3434,6 +3434,7 @@ CONFIG_DEVFREQ_GOV_USERSPACE=y
 CONFIG_DEVFREQ_GOV_CPUFREQ=y
 CONFIG_DEVFREQ_GOV_MSM_ADRENO_TZ=y
 CONFIG_ADRENO_IDLER=y
+CONFIG_SIMPLE_GPU_ALGORITHM=y
 CONFIG_MSM_BIMC_BWMON=y
 # CONFIG_ARMBW_HWMON is not set
 CONFIG_DEVFREQ_GOV_MSM_GPUBW_MON=y
@@ -3524,10 +3525,9 @@ CONFIG_MSM_CPU_PWR_CTL=y
 # CONFIG_MSM_SYSTEM_HEALTH_MONITOR is not set
 # CONFIG_QCOM_EARLY_RANDOM is not set
 # CONFIG_MSM_PACMAN is not set
-CONFIG_MSM_CORE_CTL_HELPER=y
+# CONFIG_MSM_CORE_CTL_HELPER is not set
 # CONFIG_MSM_CORE_CTL is not set
-CONFIG_MSM_PERFORMANCE=y
-CONFIG_MSM_PERFORMANCE_HOTPLUG_ON=y
+# CONFIG_MSM_PERFORMANCE is not set
 # CONFIG_INTELLI_PLUG is not set
 # CONFIG_MSM_HOTPLUG is not set
 CONFIG_THUNDERPLUG_CONTROL=y
