--- a/arch/arm64/configs/null_ido_defconfig
+++ b/arch/arm64/configs/null_ido_defconfig
@@ -124,6 +124,7 @@ CONFIG_NET_NS=y
 CONFIG_UIDGID_CONVERTED=y
 # CONFIG_UIDGID_STRICT_TYPE_CHECKS is not set
 CONFIG_SCHED_AUTOGROUP=y
+CONFIG_SCHED_FEATURES_SYSFS=y
 # CONFIG_SYSFS_DEPRECATED is not set
 CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
@@ -1959,11 +1960,7 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_SMB350_CHARGER is not set
 # CONFIG_SMB1351_USB_CHARGER is not set
 # CONFIG_SMB135X_CHARGER is not set
-# CONFIG_BQ2022A_SUPPORT is not set
-# CONFIG_WT_USE_XIAOMI_CHARGE_1050 is not set
 # CONFIG_SMB1360_CHARGER_FG is not set
-# CONFIG_SM5414_CHARGER is not set
-# CONFIG_FAN54015_CHARGER is not set
 CONFIG_SMB358_CHARGER=y
 CONFIG_BATTERY_CW2015=y
 # CONFIG_BATTERY_BQ28400 is not set
@@ -3349,9 +3346,9 @@ CONFIG_PRIMA_WLAN_OKC=y
 CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
 CONFIG_WLAN_FEATURE_11W=y
 CONFIG_QCOM_VOWIFI_11R=y
-CONFIG_QCOM_TDLS=y
 CONFIG_ENABLE_LINUX_REG=y
 CONFIG_WLAN_OFFLOAD_PACKETS=y
+CONFIG_QCOM_TDLS=y
 
 #
 # Qualcomm MSM specific device drivers
